# code_template

./: .travis.yml  CMakeLists.txt  README.md
include/: template.hpp
src/: CMakeLists.txt  template.cpp
test/: CMakeLists.txt  main.cpp
test/dummy/: CMakeLists.txt  dummy.cpp
